# Waze-Traffic-Calculator

./: CNAME  C_NAME  README.md  __init__.sh  custom.css  index.html  locations.md  main.py  main.xlsm  pyproject.toml  traffictimes.csv  xlproject.py  xlproject.xlsm
docs/: index.md
