[tool.poetry]
name = "waze-traffic-calculator"
version = "0.1.0"
description = ""
authors = ["jd2012"]

[tool.poetry.dependencies]
python = "^3.8"
wazeroutecalculator = "^0.12"
pymongo = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
